--- a/index.html
+++ b/index.html
@@ -1,16 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>hahah</title>
+        <title>sandstrand</title>
     </head>
     <body>
-        <h1>play meadow, humble flowers need to grow, too, i guess</h1>
-        <h2>html css</h2>
-        <p><a href="htmlcss1.html">1</a></p>
-        <p><a href="float.html">2</a></p>
-        <p><a href="nachbau.html">3</a></p>
-        <p><a href="bildtest2.html">4</a></p>
-        <p><a href="colorstuff.html">5</a></p>
-        <p><a href="./complextestsite/compl.html">6</a></p>
+        <h1>sandstrand sandstrand</h1>
     </body>
 </html>
