--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
     <head>
         <title>sandstrand</title>
+        <style>
+        body {
+  background-image: url("/pictures/main/sand.jpg");
+         }
     </head>
     <body>
         <h1>sandstrand sandstrand</h1>
