--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>sandstrand</title>
+    <style>
+    body {
+    background-image: url("/pictures/main/sand.jpg");
+    }
+    </style>
     </head>
     <body>
         <h1>sandstrand sandstrand</h1>
