--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
     <style>
     body {
-    background-image: url("/pictures/main.sand.png");
+    background-image: url("/pictures/main/sand.png");
     }
     </style>
     </head>
