--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
     <head>
     <style>
     body {
-    background-image: src=("/pictures/main/sand.png");
+      background-image: src=("/pictures/main/sand.png");
     }
     </style>
     </head>
     <body>
         <h1>sandstrand sandstrand</h1>
+        <img src="pictures/main/sand.png">
     </body>
 </html>
