--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     </head>
     <body>
         <h1>sandstrand sandstrand</h1>
-        <img src="/sandstrand.github.io/pictures/main/sand.png">
+        <img src="/pictures/main/sand.png">
     </body>
 </html>
