--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
     <head>
     <style>
     body {
-      background-image: src=("/sandstrand.github.io/pictures/main/sand.png");
+      background-image: src=("sand.png");
     }
     </style>
     </head>
     <body>
         <h1>sandstrand sandstrand</h1>
-        <img src="/pictures/main/sand.png">
+        <img src="sand.png">
     </body>
 </html>
