--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
     <style>
     body {
-      background-image: src=("sand.png");
+      background-image: url("sand.png");
     }
     </style>
     </head>
