--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
     </head>
     <body>
         <h1>sandstrand sandstrand</h1>
+        <p><a href="https://dirtylaundri.github.io/sandstrand.github.io/will">Next</a>
+        </p>
     </body>
 </html>
