--- a/will.html
+++ b/will.html
@@ -1,4 +1,14 @@
 <!DOCTYPE html>
+<head>
+<style>
+div.fixed {
+  position: 200px;
+  bottom: 200px;
+  right: 200px;
+  width: 200px;
+}
+</style>
+</head>
 <html>
     <head>
     </head>
