--- a/will.html
+++ b/will.html
@@ -13,6 +13,8 @@ div.fixed {
     <head>
     </head>
     <body>
+      <div class="fixed">
         <img src="will.png" alt="quest image" width="532" height="800">
+      </div>
     </body>
 </html>
