--- a/will.html
+++ b/will.html
@@ -2,10 +2,9 @@
 <head>
 <style>
 div.fixed {
-  position: 200px;
+  position: fixed;
   bottom: 200px;
   right: 200px;
-  width: 200px;
 }
 </style>
 </head>
