--- a/will.html
+++ b/will.html
@@ -3,8 +3,9 @@
 <style>
 div.fixed {
   position: fixed;
-  bottom: 200px;
-  right: 200px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,  -50%);
 }
 </style>
 </head>
