--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <body>
         <h1>sandstrand sandstrand</h1>
         <p><a href="https://dirtylaundri.github.io/sandstrand.github.io/will">Next</a>
+           <a href="https://dirtylaundri.github.io/sandstrand.github.io/will">
+           <img src="pfeil.png" alt="Pfeil" style="width:42px;height:42px;">
+           </a>
         </p>
     </body>
 </html>
