--- a/index.html
+++ b/index.html
@@ -5,13 +5,20 @@
     body {
       background-image: url("sand.png");
     }
+     div.pfeil {
+      position: fixed;
+      bottom: 100%;
+      right: 100%;
+      }
     </style>
     </head>
     <body>
         <h1>sandstrand sandstrand</h1>
         <p>
            <a href="https://dirtylaundri.github.io/sandstrand.github.io/will">
+           <div class="pfeil">
            <img src="pfeil.png" alt="Pfeil" style="width:42px;height:42px;">
+           </div>
            </a>
         </p>
     </body>
