--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     }
      div.pfeil {
       position: fixed;
-      bottom: 90%;
-      right: 90%;
+      bottom: 50px;
+      right: 50px;
       }
     </style>
     </head>
