--- a/index.html
+++ b/index.html
@@ -2,14 +2,9 @@
 <html>
     <head>
     <style>
+        <link rel="stylesheet" href="stylesheetbasic.css">}
     body {
-      background-image: url("sand.png");
-    }
-     div.pfeil {
-      position: fixed;
-      bottom: 5px;
-      right: 5px;
-      }
+      background-image: url("sand.png")
     </style>
     </head>
     <body>
