--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
     <head>
     <style>
-        <link rel="stylesheet" href="stylesheetbasic.css">}
+        <link rel="stylesheet" href="stylesheetbasic.css">
     body {
-      background-image: url("sand.png")
+      background-image: url("sand.png")}
     </style>
     </head>
     <body>
