--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <style>
         <link rel="stylesheet" href="stylesheetbasic.css">
     body {
-      background-image: url("sand.png")}
+      background-image: url("sand.png");}
     </style>
     </head>
     <body>
