--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
     <style>
-    <link rel="stylesheet" href="stylesheetbasic.css">
+    <a rel="stylesheet" href="stylesheetbasic.css">
     body {
       background-image: url("sand.png");}
     </style>
