--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
+    <link rel="stylesheet" href="stylesheetbasic.css">
     <style>
-    <a rel="stylesheet" href="stylesheetbasic.css">
-    body {
-      background-image: url("sand.png");}
+    body { background-image: url("sand.png");}
     </style>
     </head>
     <body>
