--- a/will.html
+++ b/will.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <head>
+<link rel="stylesheet" href="stylesheetbasic.css">
 <style>
 div.fixed {
   position: fixed;
@@ -15,6 +16,9 @@ div.fixed {
     <body>
       <div class="fixed">
         <img src="will.png" alt="quest image" width="532" height="800">
+      </div>
+      <div class="pfeil">
+           <img src="pfeil.png" alt="Pfeil" style="width:42px;height:42px;">
       </div>
     </body>
 </html>
