--- a/will.html
+++ b/will.html
@@ -1,20 +1,12 @@
 <!DOCTYPE html>
 <head>
 <link rel="stylesheet" href="stylesheetbasic.css">
-<style>
-div.fixed {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%,  -50%);
-}
-</style>
 </head>
 <html>
     <head>
     </head>
     <body>
-      <div class="fixed">
+      <div class="qbild">
         <img src="will.png" alt="quest image" width="532" height="800">
       </div>
       <div class="pfeil">
