--- a/will.html
+++ b/will.html
@@ -9,6 +9,9 @@
       <div class="qbild">
         <img src="will.png" alt="quest image" width="532" height="800">
       </div>
+      <div class="pfeilr">
+           <img src="pfeilr.png" alt="Pfeilr" style="width:42px;height:42px;">
+      </div>
       <div class="pfeil">
            <img src="pfeil.png" alt="Pfeil" style="width:42px;height:42px;">
       </div>
