--- a/will.html
+++ b/will.html
@@ -16,7 +16,7 @@
       </div>
       </p>
       <p>
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/will">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/will2">
       <div class="pfeil">
            <img src="pfeil.png" alt="Pfeil" style="width:42px;height:42px;">
       </div>
