--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <h1>sandstrand sandstrand</h1>
         <p>
-           <a href="https://dirtylaundri.github.io/sandstrand.github.io/will">
+           <a href="https://dirtylaundri.github.io/sandstrand.github.io/1">
            <div class="pfeil">
            <img src="pfeil.png" alt="Pfeil" style="width:42px;height:42px;">
            </div>
