--- a/01.html
+++ b/01.html
@@ -6,8 +6,9 @@
     <head>
     </head>
     <body>
-      <p style="font-size:500%;">Filmrätsel</p>
-      <p style="font-size:200%;">Carla U.R.</p>
+      <p style="font-size:500%; style="text-align:center;">Filmrätsel</p>
+      <p style="font-size:200%; style="text-align:center;">Ein Bilderbuch</p>
+      <p style="font-size:200%; style="text-align:center;"><em>Von Carla U.R.</em></p>
         <a href="https://dirtylaundri.github.io/sandstrand.github.io/">
       <div class="pfeilr">
            <img src="pfeilr.png" alt="Pfeilr" style="width:42px;height:42px;">
