--- a/02.html
+++ b/02.html
@@ -6,15 +6,16 @@
     <head>
     </head>
     <body>
-      
-      <p>
-        <a href="https://dirtylaundri.github.io/sandstrand.github.io/">
+      <p style="text-align:center;"><em>She acknowledged it to be very fitting,<br />that every little social commonwealth should dictate<br />its own matters of discourse; and hoped,<br />ere long, to become a not unworthy member<br />of the one she was now transplanted into.</em></p>
+      <p style="text-align:center;"><b>Jane Austen</b></p>
+        <p>
+        <a href="https://dirtylaundri.github.io/sandstrand.github.io/01">
       <div class="pfeilr">
            <img src="pfeilr.png" alt="Pfeilr" style="width:42px;height:42px;">
       </div>
       </p>
       <p>
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/will">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/03">
       <div class="pfeil">
            <img src="pfeil.png" alt="Pfeil" style="width:42px;height:42px;">
       </div>
