--- a/02.html
+++ b/02.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <head>
 <link rel="stylesheet" href="stylesheetbasic.css">
+    <style>
+        body
+        {padding-top: 150px;
+        }
+    </style>   
 </head>
 <html>
     <head>
