--- a/04.html
+++ b/04.html
@@ -6,8 +6,12 @@
     <head>
     </head>
     <body>
-      
       <p>
+      <p>Die Braut, die sich nicht trout</p>
+      <p>Wenn mich jemand hören könnte, wie ich Obst, Obscht, Frucht, Fruit, Fish, Never, Niemals, Nie, To<br/>in allen Varianten hintereinanderwegspreche</p>
+      <p>Ich nenne gleich einfach mal alle amerikanischen Klassiker die es gibt, Moment</p>
+      <p>Bitte enschuldige, dass ich geschriehen habe</p>
+      <p>die rätsel sind belastend für uns alle</p>
         <a href="https://dirtylaundri.github.io/sandstrand.github.io/">
       <div class="pfeilr">
            <img src="pfeilr.png" alt="Pfeilr" style="width:42px;height:42px;">
