--- a/04.html
+++ b/04.html
@@ -12,13 +12,13 @@
       <p>Ich nenne gleich einfach mal alle amerikanischen Klassiker die es gibt, Moment</p>
       <p>Bitte enschuldige, dass ich geschriehen habe</p>
       <p>die rätsel sind belastend für uns alle</p>
-        <a href="https://dirtylaundri.github.io/sandstrand.github.io/">
+        <a href="https://dirtylaundri.github.io/sandstrand.github.io/03">
       <div class="pfeilr">
            <img src="pfeilr.png" alt="Pfeilr" style="width:42px;height:42px;">
       </div>
       </p>
       <p>
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/will">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/05">
       <div class="pfeil">
            <img src="pfeil.png" alt="Pfeil" style="width:42px;height:42px;">
       </div>
