--- a/05.html
+++ b/05.html
@@ -12,13 +12,13 @@
         <p>Mag nie Fisch und Fleisch essen =</p>
         <p>Magnificent Obsession (Douglas Sirk, 1954)</p>
       <p>
-        <a href="https://dirtylaundri.github.io/sandstrand.github.io/">
+        <a href="https://dirtylaundri.github.io/sandstrand.github.io/04">
       <div class="pfeilr">
            <img src="pfeilr.png" alt="Pfeilr" style="width:42px;height:42px;">
       </div>
       </p>
       <p>
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/will">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/06">
       <div class="pfeil">
            <img src="pfeil.png" alt="Pfeil" style="width:42px;height:42px;">
       </div>
