--- a/04.html
+++ b/04.html
@@ -3,14 +3,14 @@
 <link rel="stylesheet" href="stylesheetbasic.css">
 </head>
 <html>
-    <head>
-    </head>
     <body>
+    <div class="qbild">
       <p style="text-align:center;">Die Braut, die sich nicht trout</p>
       <p style="text-align:center;">Wenn mich jemand hören könnte, wie ich Obst, Obscht, Frucht, Fruit, Fish, Never, Niemals, Nie, To<br/>in allen Varianten hintereinanderwegspreche</p>
       <p style="text-align:center;">Ich nenne gleich einfach mal alle amerikanischen Klassiker die es gibt, Moment</p>
       <p style="text-align:center;">Bitte enschuldige, dass ich geschriehen habe</p>
       <p style="text-align:center;">die rätsel sind belastend für uns alle</p>
+    </div>
            <a href="https://dirtylaundri.github.io/sandstrand.github.io/03">
       <div class="pfeilr">
            <img src="pfeilr.png" alt="Pfeilr" style="width:42px;height:42px;">
