--- a/05.html
+++ b/05.html
@@ -7,10 +7,9 @@
     </head>
     <body>
       <div class="qbild">
-        <img src="will.png" alt="quest image" width="372" height="560">
+        <img src="willf.png" alt="quest image" width="372" height="560">
+        <p>Mag nie Fisch und Fleisch essen</p>
       </div>
-        <p>Mag nie Fisch und Fleisch essen =</p>
-        <p>Magnificent Obsession (Douglas Sirk, 1954)</p>
       <p>
         <a href="https://dirtylaundri.github.io/sandstrand.github.io/04">
       <div class="pfeilr">
