--- a/05.html
+++ b/05.html
@@ -8,7 +8,7 @@
     <body>
       <div class="qbild">
         <img src="willf.png" alt="quest image" width="372" height="560">
-        <p style="font-size:200%; text-align:center;>Mag nie Fisch und Obst essen</p>
+        <p style="font-size:200%; text-align:center;">Mag nie Fisch und Obst essen</p>
       </div>
       <p>
         <a href="https://dirtylaundri.github.io/sandstrand.github.io/04">
