--- a/05.html
+++ b/05.html
@@ -19,7 +19,7 @@
       <p>
           <a href="https://dirtylaundri.github.io/sandstrand.github.io/06">
       <div class="pfeil">
-           <img src="pfeil.png" alt="Pfeil" style="width:5%;height:5%;">
+           <img src="pfeil.png" alt="Pfeil" style="width:5vw;height:5vh;">
       </div>
       </p>
     </body>
