--- a/05.html
+++ b/05.html
@@ -13,13 +13,13 @@
       <p>
         <a href="https://dirtylaundri.github.io/sandstrand.github.io/04">
       <div class="pfeilr">
-           <img src="pfeilr.png" alt="Pfeilr" style="width:42px;height:42px;">
+           <img src="pfeilr.png" alt="Pfeilr" style="width:3vw;height:6vh;">
       </div>
       </p>
       <p>
           <a href="https://dirtylaundri.github.io/sandstrand.github.io/06">
       <div class="pfeil">
-           <img src="pfeil.png" alt="Pfeil" style="width:5vw;height:5vh;">
+           <img src="pfeil.png" alt="Pfeil" style="width:3vw;height:6vh;">
       </div>
       </p>
     </body>
