--- a/04.html
+++ b/04.html
@@ -13,13 +13,13 @@
     </div>
            <a href="https://dirtylaundri.github.io/sandstrand.github.io/03">
       <div class="pfeilr">
-           <img src="pfeilr.png" alt="Pfeilr" style="width:42px;height:42px;">
+           <img src="pfeilr.png" alt="Pfeilr" style="width:3vw;height:6vh;">
       </div>
       </p>
       <p>
           <a href="https://dirtylaundri.github.io/sandstrand.github.io/05">
       <div class="pfeil">
-           <img src="pfeil.png" alt="Pfeil" style="width:42px;height:42px;">
+           <img src="pfeil.png" alt="Pfeil" style="width:3vw;height:6vh;">
       </div>
       </p>
     </body>
