--- a/03.html
+++ b/03.html
@@ -12,13 +12,13 @@
       <p>
         <a href="https://dirtylaundri.github.io/sandstrand.github.io/02">
       <div class="pfeilr">
-           <img src="pfeilr.png" alt="Pfeilr" style="width:42px;height:42px;">
+           <img src="pfeilr.png" alt="Pfeilr" style="width:3vw;height:6vh;">
       </div>
       </p>
       <p>
           <a href="https://dirtylaundri.github.io/sandstrand.github.io/04">
       <div class="pfeil">
-           <img src="pfeil.png" alt="Pfeil" style="width:42px;height:42px;">
+           <img src="pfeil.png" alt="Pfeil" style="width:3vw;height:6vh;">
       </div>
       </p>
     </body>
