--- a/02.html
+++ b/02.html
@@ -16,13 +16,13 @@
         <p>
         <a href="https://dirtylaundri.github.io/sandstrand.github.io/01">
       <div class="pfeilr">
-           <img src="pfeilr.png" alt="Pfeilr" style="width:42px;height:42px;">
+           <img src="pfeilr.png" alt="Pfeilr" style="width:3vw;height:6vh;">
       </div>
       </p>
       <p>
           <a href="https://dirtylaundri.github.io/sandstrand.github.io/03">
       <div class="pfeil">
-           <img src="pfeil.png" alt="Pfeil" style="width:42px;height:42px;">
+           <img src="pfeil.png" alt="Pfeil" style="width:3vw;height:6vh;">
       </div>
       </p>
     </body>
