--- a/01.html
+++ b/01.html
@@ -17,7 +17,7 @@
       <p>
           <a href="https://dirtylaundri.github.io/sandstrand.github.io/02">
       <div class="pfeil">
-           <img src="pfeil.png" alt="Pfeil" style="width:42px;height:42px;">
+           <img src="pfeil.png" alt="Pfeil" style="width:3vw;height:6vh;">
       </div>
       </p>
     </body>
