--- a/03.html
+++ b/03.html
@@ -7,7 +7,7 @@
     </head>
     <body>
       <div class="qbild">
-        <img src="will.png" alt="quest image" width="532" height="800">
+        <img src="will.png" alt="quest image" height="90vh">
       </div>
       <p>
         <a href="https://dirtylaundri.github.io/sandstrand.github.io/02">
