--- a/05.html
+++ b/05.html
@@ -7,7 +7,7 @@
     </head>
     <body>
       <div class="qbild">
-        <img src="willf.jpg" alt="quest image" width="372" height="560">
+        <img src="willf.jpg" alt="quest image" style="height:70vh;">
         <p style="font-size:200%; text-align:center;">Mag nie Fisch und Obst essen</p>
       </div>
       <p>
