--- a/06.html
+++ b/06.html
@@ -6,7 +6,10 @@
     <head>
     </head>
     <body>
-      
+      <div class="qbild">
+        <img src="06.jpg" alt="quest image" style="width:90vw;">
+        <p style="font-size:200%; text-align:center;">Magnificent Obsession (Douglas Sirk, 1954)</p>
+      </div>
       <p>
         <a href="https://dirtylaundri.github.io/sandstrand.github.io/05">
       <div class="pfeilr">
