--- a/04.html
+++ b/04.html
@@ -5,11 +5,11 @@
 <html>
     <body>
     <div class="qbild">
-      <p style="text-align:center;">Die Braut, die sich nicht trout</p>
-      <p style="text-align:center;">Wenn mich jemand hören könnte, wie ich Obst, Obscht, Frucht, Fruit, Fish, Never, Niemals, Nie, To<br/>in allen Varianten hintereinanderwegspreche</p>
-      <p style="text-align:center;">Ich nenne gleich einfach mal alle amerikanischen Klassiker die es gibt, Moment</p>
-      <p style="text-align:center;">Bitte enschuldige, dass ich geschriehen habe</p>
-      <p style="text-align:center;">die rätsel sind belastend für uns alle</p>
+      <p style="text-align:center;">"Die Braut, die sich nicht trout"</p>
+      <p style="text-align:left;">"Wenn mich jemand hören könnte, wie ich Obst, Obscht, Frucht, Fruit, Fish, Never, Niemals, Nie, To<br/>in allen Varianten hintereinanderwegspreche"</p>
+      <p style="text-align:right;">"Ich nenne gleich einfach mal alle amerikanischen Klassiker die es gibt, Moment"</p>
+      <p style="text-align:center;">"Bitte enschuldige, dass ich geschriehen habe"</p>
+      <p style="text-align:left;">"die rätsel sind belastend für uns alle"</p>
     </div>
            <a href="https://dirtylaundri.github.io/sandstrand.github.io/03">
       <div class="pfeilr">
