--- a/08.html
+++ b/08.html
@@ -6,17 +6,22 @@
     <head>
     </head>
     <body>
-      
-      <p>
-        <a href="https://dirtylaundri.github.io/sandstrand.github.io/">
+    <div class="qbild">
+      <p style="text-align:center;">"Sie: Gib Gas, ich will Spaß"</p>
+      <p style="text-align:left;">"Ich wage nicht, im Zusammenhang mit der Lösung vor allem seiner Sprechblase das Wort "Homophonie" in den Mund zu nehmen"</p>
+      <p style="text-align:right;">"Das Gehirn will das nicht, es will irgendwie sein eigenes Ding verfolgen, und so kommt man nie zur Lösung, seufz."</p>
+      <p style="text-align:center;">"Ich kommuniziere nur noch per Filmnamen und meine Mitmenschen müssen entziffern, was ich von ihnen möchte."</p>
+      <p style="text-align:left;">"Ich verlange ein Schiedsgericht"</p>
+    </div>
+           <a href="https://dirtylaundri.github.io/sandstrand.github.io/03">
       <div class="pfeilr">
-           <img src="pfeilr.png" alt="Pfeilr" style="width:42px;height:42px;">
+           <img src="pfeilr.png" alt="Pfeilr" style="width:3vw;height:6vh;">
       </div>
       </p>
       <p>
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/will">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/05">
       <div class="pfeil">
-           <img src="pfeil.png" alt="Pfeil" style="width:42px;height:42px;">
+           <img src="pfeil.png" alt="Pfeil" style="width:3vw;height:6vh;">
       </div>
       </p>
     </body>
