--- a/09.html
+++ b/09.html
@@ -6,18 +6,21 @@
     <head>
     </head>
     <body>
-      
+      <div class="qbild">
+        <img src="09.jpg" alt="quest image" style="height:90vh;">
+      </div>
       <p>
-        <a href="https://dirtylaundri.github.io/sandstrand.github.io/">
+        <a href="https://dirtylaundri.github.io/sandstrand.github.io/08">
       <div class="pfeilr">
-           <img src="pfeilr.png" alt="Pfeilr" style="width:42px;height:42px;">
+           <img src="pfeilr.png" alt="Pfeilr" style="width:3vw;height:6vh;">
       </div>
       </p>
       <p>
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/will">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/10">
       <div class="pfeil">
-           <img src="pfeil.png" alt="Pfeil" style="width:42px;height:42px;">
+           <img src="pfeil.png" alt="Pfeil" style="width:3vw;height:6vh;">
       </div>
       </p>
     </body>
 </html>
+
