--- a/11.html
+++ b/11.html
@@ -6,17 +6,20 @@
     <head>
     </head>
     <body>
-      
+      <div class="qbild">
+        <img src="11.jpg" alt="quest image" style="width:80vw;">
+        <p style="font-size:200%; text-align:center;">Taxi Driver (Martin Scorsese, 1976)</p>
+      </div>
       <p>
-        <a href="https://dirtylaundri.github.io/sandstrand.github.io/">
+        <a href="https://dirtylaundri.github.io/sandstrand.github.io/10">
       <div class="pfeilr">
-           <img src="pfeilr.png" alt="Pfeilr" style="width:42px;height:42px;">
+           <img src="pfeilr.png" alt="Pfeilr" style="width:3vw;height:6vh;">
       </div>
       </p>
       <p>
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/will">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/12">
       <div class="pfeil">
-           <img src="pfeil.png" alt="Pfeil" style="width:42px;height:42px;">
+           <img src="pfeil.png" alt="Pfeil" style="width:3vw;height:6vh;">
       </div>
       </p>
     </body>
