--- a/11.html
+++ b/11.html
@@ -8,7 +8,7 @@
     <body>
       <div class="qbild">
         <img src="11.jpg" alt="quest image" style="width:80vw;">
-        <p style="font-size:200%; text-align:center;">Taxi Driver (Martin Scorsese, 1976)</p>
+        <p style="font-size:200%; text-align:center;">Das siebente Siegel / Det sjunde inseglet (Ingmar Bergman, 1957)</p>
       </div>
       <p>
         <a href="https://dirtylaundri.github.io/sandstrand.github.io/10">
