--- a/13.html
+++ b/13.html
@@ -3,20 +3,23 @@
 <link rel="stylesheet" href="stylesheetbasic.css">
 </head>
 <html>
-    <head>
-    </head>
     <body>
-      
-      <p>
-        <a href="https://dirtylaundri.github.io/sandstrand.github.io/">
+    <div class="qbild">
+      <p style="text-align:center;">"Es ist sehr komplex in seiner Blödheit."</p>
+      <p style="text-align:left;">"Nach der Auflösung bekomme ich wahrscheinlich Schläge."</p>
+      <p style="text-align:right;">"Letztes Jahr in Marienbad"</p>
+      <p style="text-align:center;">"Sein Tun gibt ihm seinen Namen."</p>
+      <p style="text-align:left;">"Krieg das nur am Rande mit und es wird immer verrückter."</p>
+    </div>
+           <a href="https://dirtylaundri.github.io/sandstrand.github.io/12">
       <div class="pfeilr">
-           <img src="pfeilr.png" alt="Pfeilr" style="width:42px;height:42px;">
+           <img src="pfeilr.png" alt="Pfeilr" style="width:3vw;height:6vh;">
       </div>
       </p>
       <p>
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/will">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/14">
       <div class="pfeil">
-           <img src="pfeil.png" alt="Pfeil" style="width:42px;height:42px;">
+           <img src="pfeil.png" alt="Pfeil" style="width:3vw;height:6vh;">
       </div>
       </p>
     </body>
