--- a/15.html
+++ b/15.html
@@ -6,17 +6,20 @@
     <head>
     </head>
     <body>
-      
+      <div class="qbild">
+        <img src="15.jpg" alt="quest image" style="width:90vw;">
+      </div>
       <p>
-        <a href="https://dirtylaundri.github.io/sandstrand.github.io/">
+        <a href="https://dirtylaundri.github.io/sandstrand.github.io/14">
+        <p style="font-size:200%; text-align:center;">(Das) Bad, (das) Leute nennt</p>
       <div class="pfeilr">
-           <img src="pfeilr.png" alt="Pfeilr" style="width:42px;height:42px;">
+           <img src="pfeilr.png" alt="Pfeilr" style="width:3vw;height:6vh;">
       </div>
       </p>
       <p>
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/will">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/16">
       <div class="pfeil">
-           <img src="pfeil.png" alt="Pfeil" style="width:42px;height:42px;">
+           <img src="pfeil.png" alt="Pfeil" style="width:3vw;height:6vh;">
       </div>
       </p>
     </body>
