--- a/15.html
+++ b/15.html
@@ -11,7 +11,7 @@
       </div>
       <p>
         <a href="https://dirtylaundri.github.io/sandstrand.github.io/14">
-        <p style="font-size:200%; text-align:center;">(Das) Bad, (das) Leute nennt</p>
+        <p style="font-size:200%; text-align:center;">Bad Lieutenant (Abel Ferrara, 1992)</p>
       <div class="pfeilr">
            <img src="pfeilr.png" alt="Pfeilr" style="width:3vw;height:6vh;">
       </div>
