--- a/04.html
+++ b/04.html
@@ -4,7 +4,7 @@
 </head>
 <html>
     <body>
-    <div class="quote">
+    <div class="quotes">
       <p style="text-align:center;">"Die Braut, die sich nicht trout"</p>
       <p style="text-align:left;">"Wenn mich jemand hören könnte, wie ich Obst, Obscht, Frucht, Fruit, Fish, Never, Niemals, Nie, To<br/>in allen Varianten hintereinanderwegspreche"</p>
       <p style="text-align:right;">"Ich nenne gleich einfach mal alle amerikanischen Klassiker die es gibt, Moment"</p>
