--- a/08.html
+++ b/08.html
@@ -6,7 +6,7 @@
     <head>
     </head>
     <body>
-    <div class="qbild">
+    <div class="quotes">
       <p style="text-align:center;">"Sie: Gib Gas, ich will Spaß"</p>
       <p style="text-align:left;">"Ich wage nicht, im Zusammenhang mit der Lösung vor allem seiner Sprechblase das Wort "Homophonie" in den Mund zu nehmen"</p>
       <p style="text-align:right;">"Das Gehirn will das nicht, es will irgendwie sein eigenes Ding verfolgen, und so kommt man nie zur Lösung, seufz."</p>
