--- a/13.html
+++ b/13.html
@@ -4,7 +4,7 @@
 </head>
 <html>
     <body>
-    <div class="qbild">
+    <div class="quotes">
       <p style="text-align:center;">"Es ist sehr komplex in seiner Blödheit."</p>
       <p style="text-align:left;">"Nach der Auflösung bekomme ich wahrscheinlich Schläge."</p>
       <p style="text-align:right;">"Letztes Jahr in Marienbad"</p>
