--- a/04.html
+++ b/04.html
@@ -11,7 +11,7 @@
       <p style="text-align:center;">"Bitte enschuldige, dass ich geschriehen habe"</p>
       <p style="text-align:left;">"die rätsel sind belastend für uns alle"</p>
     </div>
-           <a href="https://dirtylaundri.github.io/sandstrand.github.io/a">
+           <a href="https://dirtylaundri.github.io/sandstrand.github.io/03">
       <div class="pfeilr">
            <img src="pfeilr.png" alt="Pfeilr" style="width:3vw;height:6vh;">
       </div>
