--- a/a.html
+++ b/a.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <head>
 <link rel="stylesheet" href="stylesheetbasic.css">
+<style>
 body {
   background-color: rgb(155,0,0);
 }
+</style>
 </head>
 <html>
     <head>
@@ -15,14 +17,14 @@ body {
       </p>
       </div>
       <p>
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/03">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/02">
       <div class="pfeilr">
            <img src="pfeilr.png" alt="Pfeil" style="width:3vw;height:6vh;">
       </div>
       </p>
       </div>
       <p>
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/04">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/03">
       <div class="pfeil">
            <img src="pfeil.png" alt="Pfeil" style="width:3vw;height:6vh;">
       </div>
