--- a/02.html
+++ b/02.html
@@ -20,7 +20,7 @@
       </div>
       </p>
       <p>
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/03">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/a">
       <div class="pfeil">
            <img src="pfeil.png" alt="Pfeil" style="width:3vw;height:6vh;">
       </div>
