--- a/03.html
+++ b/03.html
@@ -10,7 +10,7 @@
         <img src="03.jpg" alt="quest image" style="height:90vh;">
       </div>
       <p>
-        <a href="https://dirtylaundri.github.io/sandstrand.github.io/02">
+        <a href="https://dirtylaundri.github.io/sandstrand.github.io/b">
       <div class="pfeilr">
            <img src="pfeilr.png" alt="Pfeilr" style="width:3vw;height:6vh;">
       </div>
