--- a/06.html
+++ b/06.html
@@ -17,7 +17,7 @@
       </div>
       </p>
       <p>
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/07">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/b">
       <div class="pfeil">
            <img src="pfeil.png" alt="Pfeil" style="width:3vw;height:6vh;">
       </div>
