--- a/12.html
+++ b/12.html
@@ -10,7 +10,7 @@
         <img src="12.jpg" alt="quest image" style="height:70vh;">
       </div>
       <p>
-        <a href="https://dirtylaundri.github.io/sandstrand.github.io/11">
+        <a href="https://dirtylaundri.github.io/sandstrand.github.io/c">
       <div class="pfeilr">
            <img src="pfeilr.png" alt="Pfeilr" style="width:3vw;height:6vh;">
       </div>
