--- a/16.html
+++ b/16.html
@@ -1,22 +1,32 @@
 <!DOCTYPE html>
 <head>
 <link rel="stylesheet" href="stylesheetbasic.css">
+<style>
+body {
+  background-color: rgb(60,129,0);
+}
+</style>
 </head>
 <html>
     <head>
     </head>
     <body>
-      
+      <div class="qbild">
+      <p style="color:rgb(60, 179, 113); font-size:20em;">
+      1
+      </p>
+      </div>
       <p>
-        <a href="https://dirtylaundri.github.io/sandstrand.github.io/">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/15">
       <div class="pfeilr">
-           <img src="pfeilr.png" alt="Pfeilr" style="width:42px;height:42px;">
+           <img src="pfeilr.png" alt="Pfeil" style="width:3vw;height:6vh;">
       </div>
       </p>
+      </div>
       <p>
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/will">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/17">
       <div class="pfeil">
-           <img src="pfeil.png" alt="Pfeil" style="width:42px;height:42px;">
+           <img src="pfeil.png" alt="Pfeil" style="width:3vw;height:6vh;">
       </div>
       </p>
     </body>
