--- a/18.html
+++ b/18.html
@@ -3,20 +3,23 @@
 <link rel="stylesheet" href="stylesheetbasic.css">
 </head>
 <html>
-    <head>
-    </head>
     <body>
-      
-      <p>
-        <a href="https://dirtylaundri.github.io/sandstrand.github.io/">
+    <div class="quotes">
+      <p style="text-align:center;">"Also, du hast die handelnden Personen gut erkannt"</p>
+      <p style="text-align:left;">"Ach so, wegen dem Döschen"</p>
+      <p style="text-align:right;">"fack ju, göhte"</p>
+      <p style="text-align:center;">"TWINS!"</p>
+      <p style="text-align:left;">"Was macht der links Abgebildete denn gerade NICHT?"</p>
+    </div>
+           <a href="https://dirtylaundri.github.io/sandstrand.github.io/17">
       <div class="pfeilr">
-           <img src="pfeilr.png" alt="Pfeilr" style="width:42px;height:42px;">
+           <img src="pfeilr.png" alt="Pfeilr" style="width:3vw;height:6vh;">
       </div>
       </p>
       <p>
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/will">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/19">
       <div class="pfeil">
-           <img src="pfeil.png" alt="Pfeil" style="width:42px;height:42px;">
+           <img src="pfeil.png" alt="Pfeil" style="width:3vw;height:6vh;">
       </div>
       </p>
     </body>
