--- a/18.html
+++ b/18.html
@@ -3,15 +3,15 @@
 <link rel="stylesheet" href="stylesheetbasic.css">
 </head>
 <html>
+    <head>
+    </head>
     <body>
-    <div class="quotes">
-      <p style="text-align:center;">"Also, du hast die handelnden Personen gut erkannt"</p>
-      <p style="text-align:left;">"Ach so, wegen dem Döschen"</p>
-      <p style="text-align:right;">"fack ju, göhte"</p>
-      <p style="text-align:center;">"TWINS!"</p>
-      <p style="text-align:left;">"Was macht der links Abgebildete denn gerade NICHT?"</p>
-    </div>
-           <a href="https://dirtylaundri.github.io/sandstrand.github.io/17">
+      <div class="qbild">
+        <img src="18.jpg" alt="quest image" style="height:70vh;">
+        <p style="font-size:200%; text-align:center;">Schiller dichtet nicht / off duty</p>
+      </div>
+      <p>
+        <a href="https://dirtylaundri.github.io/sandstrand.github.io/17">
       <div class="pfeilr">
            <img src="pfeilr.png" alt="Pfeilr" style="width:3vw;height:6vh;">
       </div>
