--- a/17.html
+++ b/17.html
@@ -16,7 +16,7 @@
       </div>
       </p>
       <p>
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/18">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/17a">
       <div class="pfeil">
            <img src="pfeil.png" alt="Pfeil" style="width:3vw;height:6vh;">
       </div>
