--- a/18.html
+++ b/18.html
@@ -11,7 +11,7 @@
         <p style="font-size:200%; text-align:center;">Schiller dichtet nicht / off duty</p>
       </div>
       <p>
-        <a href="https://dirtylaundri.github.io/sandstrand.github.io/17">
+        <a href="https://dirtylaundri.github.io/sandstrand.github.io/17a">
       <div class="pfeilr">
            <img src="pfeilr.png" alt="Pfeilr" style="width:3vw;height:6vh;">
       </div>
