--- a/a.html
+++ b/a.html
@@ -16,11 +16,8 @@ body {
       1
       </p>
       </div>
-      <p>
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/02">
-      <div class="pfeilr">
-           <img src="pfeilr.png" alt="Pfeil" style="width:3vw;height:6vh;">
-      </div>
+      <p style="width:3vw;height:6vh;">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/02">&lt</a>
       </p>
       </div>
       <p>
