--- a/a.html
+++ b/a.html
@@ -16,6 +16,7 @@ body {
       1
       </p>
       </div>
+      <div class="pfeil">
       <p style="width:3vw;height:6vh;">
           <a href="https://dirtylaundri.github.io/sandstrand.github.io/02">&lt</a>
       </p>
