--- a/a.html
+++ b/a.html
@@ -16,10 +16,8 @@ body {
       1
       </p>
       </div>
-      <div class="pfeil">
-      <p style="width:3vw;height:6vh;">
+      <div class="pfeilr">
           <a href="https://dirtylaundri.github.io/sandstrand.github.io/02">&lt</a>
-      </p>
       </div>
       <p>
           <a href="https://dirtylaundri.github.io/sandstrand.github.io/03">
