--- a/a.html
+++ b/a.html
@@ -5,6 +5,11 @@
 body {
   background-color: rgb(155,0,0);
 }
+a {
+  color: rgb(155,0,0);
+  font-size: 4vh;
+  text-decoration:none;
+}
 </style>
 </head>
 <html>
