--- a/a.html
+++ b/a.html
@@ -7,8 +7,9 @@ body {
 }
 a {
   color: rgb(255,0,0);
-  font-size: 4vh;
+  font-size: 6em;
   text-decoration:none;
+  font-weight: 900;
 }
 </style>
 </head>
