--- a/a.html
+++ b/a.html
@@ -5,6 +5,12 @@
 body {
   background-color: rgb(155,0,0);
 }
+a {
+  color: rgb(255,0,0);
+  font-size: 6em;
+  text-decoration:none;
+  font-weight: 900;
+}
 </style>
 </head>
 <html>
