--- a/a.html
+++ b/a.html
@@ -22,11 +22,8 @@ a {
       <div class="pfeilr">
           <a href="https://dirtylaundri.github.io/sandstrand.github.io/02">&lt</a>
       </div>
-      <p>
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/03">
       <div class="pfeil">
-           <img src="pfeil.png" alt="Pfeil" style="width:3vw;height:6vh;">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/02">&gt</a>
       </div>
-      </p>
     </body>
 </html>
