--- a/a.html
+++ b/a.html
@@ -5,9 +5,6 @@
 body {
   background-color: rgb(155,0,0);
 }
-a {
-  color: rgb(255,0,0);
-}
 </style>
 </head>
 <html>
@@ -20,10 +17,10 @@ a {
       </p>
       </div>
       <div class="pfeilr">
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/02">&lt</a>
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/02" style=color:rgb(255,0,0)>&lt</a>
       </div>
       <div class="pfeil">
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/03">&gt</a>
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/03" style=color:rgb(255,0,0)>&gt</a>
       </div>
     </body>
 </html>
