--- a/03.html
+++ b/03.html
@@ -9,17 +9,11 @@
       <div class="qbild">
         <img src="03.jpg" alt="quest image" style="height:90vh;">
       </div>
-      <p>
-        <a href="https://dirtylaundri.github.io/sandstrand.github.io/a">
       <div class="pfeilr">
-           <img src="pfeilr.png" alt="Pfeilr" style="width:3vw;height:6vh;">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/a" style=color:rgb(255,0,0)>&lt</a>
       </div>
-      </p>
-      <p>
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/04">
       <div class="pfeil">
-           <img src="pfeil.png" alt="Pfeil" style="width:3vw;height:6vh;">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/04" style=color:rgb(255,0,0)>&gt</a>
       </div>
-      </p>
     </body>
 </html>
