--- a/04.html
+++ b/04.html
@@ -11,16 +11,11 @@
       <p style="text-align:center;">"Bitte enschuldige, dass ich geschriehen habe"</p>
       <p style="text-align:left;">"die rätsel sind belastend für uns alle"</p>
     </div>
-           <a href="https://dirtylaundri.github.io/sandstrand.github.io/03">
       <div class="pfeilr">
-           <img src="pfeilr.png" alt="Pfeilr" style="width:3vw;height:6vh;">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/03" style=color:rgb(255,0,0)>&lt</a>
       </div>
-      </p>
-      <p>
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/05">
       <div class="pfeil">
-           <img src="pfeil.png" alt="Pfeil" style="width:3vw;height:6vh;">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/05" style=color:rgb(255,0,0)>&gt</a>
       </div>
-      </p>
     </body>
 </html>
