--- a/06.html
+++ b/06.html
@@ -10,17 +10,12 @@
         <img src="06.jpg" alt="quest image" style="width:90vw;">
         <p style="font-size:200%; text-align:center;">Magnificent Obsession (Douglas Sirk, 1954)</p>
       </div>
-      <p>
-        <a href="https://dirtylaundri.github.io/sandstrand.github.io/05">
+     </div>
       <div class="pfeilr">
-           <img src="pfeilr.png" alt="Pfeilr" style="width:3vw;height:6vh;">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/05" style=color:rgb(255,0,0)>&lt</a>
       </div>
-      </p>
-      <p>
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/b">
       <div class="pfeil">
-           <img src="pfeil.png" alt="Pfeil" style="width:3vw;height:6vh;">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/07" style=color:rgb(255,0,0)>&gt</a>
       </div>
-      </p>
     </body>
 </html>
