--- a/01.html
+++ b/01.html
@@ -9,16 +9,12 @@
       <p style="font-size:500%; text-align:center;">Filmrätsel</p>
       <p style="font-size:200%; text-align:center;">Ein Bilderbuch</p>
       <p style="font-size:200%; text-align:center;"><em>Von Carla U.R.</em></p>
-        <a href="https://dirtylaundri.github.io/sandstrand.github.io/">
+        </div>
       <div class="pfeilr">
-           <img src="pfeilr.png" alt="Pfeilr" style="width:42px;height:42px;">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/main">&lt</a>
       </div>
-      </p>
-      <p>
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/02">
       <div class="pfeil">
-           <img src="pfeil.png" alt="Pfeil" style="width:3vw;height:6vh;">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/02">&gt</a>
       </div>
-      </p>
     </body>
 </html>
