--- a/02.html
+++ b/02.html
@@ -14,16 +14,12 @@
       <p style="text-align:center;"><em>She acknowledged it to be very fitting,<br />that every little social commonwealth should dictate<br />its own matters of discourse; and hoped,<br />ere long, to become a not unworthy member<br />of the one she was now transplanted into.</em></p>
       <p style="text-align:center;"><b>Jane Austen</b></p>
         <p>
-        <a href="https://dirtylaundri.github.io/sandstrand.github.io/01">
+        </div>
       <div class="pfeilr">
-           <img src="pfeilr.png" alt="Pfeilr" style="width:3vw;height:6vh;">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/01">&lt</a>
       </div>
-      </p>
-      <p>
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/a">
       <div class="pfeil">
-           <img src="pfeil.png" alt="Pfeil" style="width:3vw;height:6vh;">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/a">&gt</a>
       </div>
-      </p>
     </body>
 </html>
