--- a/01.html
+++ b/01.html
@@ -11,10 +11,10 @@
       <p style="font-size:200%; text-align:center;"><em>Von Carla U.R.</em></p>
         </div>
       <div class="pfeilr">
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/main">&lt</a>
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/main" style=color:rgb(0,0,0)>&lt</a>
       </div>
       <div class="pfeil">
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/02">&gt</a>
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/02" style=color:rgb(0,0,0)>&gt</a>
       </div>
     </body>
 </html>
