--- a/02.html
+++ b/02.html
@@ -16,10 +16,10 @@
         <p>
         </div>
       <div class="pfeilr">
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/01">&lt</a>
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/01" style=color:rgb(0,0,0)>&lt</a>
       </div>
       <div class="pfeil">
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/a">&gt</a>
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/a" style=color:rgb(0,0,0)>&gt</a>
       </div>
     </body>
 </html>
