--- a/b.html
+++ b/b.html
@@ -16,18 +16,11 @@ body {
       2
       </p>
       </div>
-      <p>
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/06">
       <div class="pfeilr">
-           <img src="pfeilr.png" alt="Pfeil" style="width:3vw;height:6vh;">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/06" style=color:rgb(0,0,255)>&lt</a>
       </div>
-      </p>
-      </div>
-      <p>
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/07">
       <div class="pfeil">
-           <img src="pfeil.png" alt="Pfeil" style="width:3vw;height:6vh;">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/07" style=color:rgb(0,0,255)>&gt</a>
       </div>
-      </p>
     </body>
 </html>
