--- a/08.html
+++ b/08.html
@@ -13,16 +13,11 @@
       <p style="text-align:center;">"Ich kommuniziere nur noch per Filmnamen und meine Mitmenschen müssen entziffern, was ich von ihnen möchte."</p>
       <p style="text-align:left;">"Ich verlange ein Schiedsgericht"</p>
     </div>
-           <a href="https://dirtylaundri.github.io/sandstrand.github.io/07">
       <div class="pfeilr">
-           <img src="pfeilr.png" alt="Pfeilr" style="width:3vw;height:6vh;">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/07" style=color:rgb(0,0,255)>&lt</a>
       </div>
-      </p>
-      <p>
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/09">
       <div class="pfeil">
-           <img src="pfeil.png" alt="Pfeil" style="width:3vw;height:6vh;">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/09" style=color:rgb(0,0,255)>&gt</a>
       </div>
-      </p>
     </body>
 </html>
