--- a/09.html
+++ b/09.html
@@ -9,18 +9,12 @@
       <div class="qbild">
         <img src="09.jpg" alt="quest image" style="height:90vh;">
       </div>
-      <p>
-        <a href="https://dirtylaundri.github.io/sandstrand.github.io/08">
       <div class="pfeilr">
-           <img src="pfeilr.png" alt="Pfeilr" style="width:3vw;height:6vh;">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/08" style=color:rgb(0,0,255)>&lt</a>
       </div>
-      </p>
-      <p>
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/10">
       <div class="pfeil">
-           <img src="pfeil.png" alt="Pfeil" style="width:3vw;height:6vh;">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/10" style=color:rgb(0,0,255)>&gt</a>
       </div>
-      </p>
     </body>
 </html>
 
