--- a/10.html
+++ b/10.html
@@ -10,17 +10,11 @@
         <img src="10.jpg" alt="quest image" style="width:80vw;">
         <p style="font-size:200%; text-align:center;">Taxi Driver (Martin Scorsese, 1976)</p>
       </div>
-      <p>
-        <a href="https://dirtylaundri.github.io/sandstrand.github.io/09">
       <div class="pfeilr">
-           <img src="pfeilr.png" alt="Pfeilr" style="width:3vw;height:6vh;">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/09" style=color:rgb(0,0,255)>&lt</a>
       </div>
-      </p>
-      <p>
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/11">
       <div class="pfeil">
-           <img src="pfeil.png" alt="Pfeil" style="width:3vw;height:6vh;">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/11" style=color:rgb(0,0,255)>&gt</a>
       </div>
-      </p>
     </body>
 </html>
