--- a/11.html
+++ b/11.html
@@ -10,17 +10,11 @@
         <img src="11.jpg" alt="quest image" style="width:60vw;">
         <p style="font-size:200%; text-align:center;">Das siebente Siegel / Det sjunde inseglet (Ingmar Bergman, 1957)</p>
       </div>
-      <p>
-        <a href="https://dirtylaundri.github.io/sandstrand.github.io/10">
       <div class="pfeilr">
-           <img src="pfeilr.png" alt="Pfeilr" style="width:3vw;height:6vh;">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/10" style=color:rgb(0,0,255)>&lt</a>
       </div>
-      </p>
-      <p>
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/c">
       <div class="pfeil">
-           <img src="pfeil.png" alt="Pfeil" style="width:3vw;height:6vh;">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/c" style=color:rgb(0,0,255)>&gt</a>
       </div>
-      </p>
     </body>
 </html>
