--- a/06.html
+++ b/06.html
@@ -15,7 +15,7 @@
           <a href="https://dirtylaundri.github.io/sandstrand.github.io/05" style=color:rgb(255,0,0)>&lt</a>
       </div>
       <div class="pfeil">
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/07" style=color:rgb(255,0,0)>&gt</a>
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/b" style=color:rgb(255,0,0)>&gt</a>
       </div>
     </body>
 </html>
