--- a/c.html
+++ b/c.html
@@ -16,18 +16,11 @@ body {
       3
       </p>
       </div>
-      <p>
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/11">
       <div class="pfeilr">
-           <img src="pfeilr.png" alt="Pfeil" style="width:3vw;height:6vh;">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/11" style=color:rgb(0,255,0)>&lt</a>
       </div>
-      </p>
-      </div>
-      <p>
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/12">
       <div class="pfeil">
-           <img src="pfeil.png" alt="Pfeil" style="width:3vw;height:6vh;">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/12" style=color:rgb(0,255,0)>&gt</a>
       </div>
-      </p>
     </body>
 </html>
