--- a/13.html
+++ b/13.html
@@ -11,16 +11,11 @@
       <p style="text-align:center;">"Sein Tun gibt ihm seinen Namen."</p>
       <p style="text-align:left;">"Krieg das nur am Rande mit und es wird immer verrückter."</p>
     </div>
-           <a href="https://dirtylaundri.github.io/sandstrand.github.io/12">
       <div class="pfeilr">
-           <img src="pfeilr.png" alt="Pfeilr" style="width:3vw;height:6vh;">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/12" style=color:rgb(0,255,0)>&lt</a>
       </div>
-      </p>
-      <p>
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/14">
       <div class="pfeil">
-           <img src="pfeil.png" alt="Pfeil" style="width:3vw;height:6vh;">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/14" style=color:rgb(0,255,0)>&gt</a>
       </div>
-      </p>
     </body>
 </html>
