--- a/16.html
+++ b/16.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet" href="stylesheetbasic.css">
 <style>
 body {
-  background-color: rgb(60,129,0);
+  background-color: rgb(188,130,188);
 }
 </style>
 </head>
@@ -12,21 +12,15 @@ body {
     </head>
     <body>
       <div class="qbild">
-      <p style="color:rgb(60, 179, 113); font-size:20em;">
+      <p style="color:rgb(238, 130, 238); font-size:20em;">
       4
       </p>
       </div>
-      <p>
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/15">
       <div class="pfeilr">
-           <img src="pfeilr.png" alt="Pfeil" style="width:3vw;height:6vh;">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/15" style=color:rgb(238,130,238)>&lt</a>
       </div>
-      </p>
-      </div>
-      <p>
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/17">
       <div class="pfeil">
-           <img src="pfeil.png" alt="Pfeil" style="width:3vw;height:6vh;">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/17" style=color:rgb(238,130,238)>&gt</a>
       </div>
       </p>
     </body>
