--- a/17.html
+++ b/17.html
@@ -9,17 +9,11 @@
       <div class="qbild">
         <img src="17.jpg" alt="quest image" style="height:90vh;">
       </div>
-      <p>
-        <a href="https://dirtylaundri.github.io/sandstrand.github.io/16">
       <div class="pfeilr">
-           <img src="pfeilr.png" alt="Pfeilr" style="width:3vw;height:6vh;">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/16" style=color:rgb(238,130,238)>&lt</a>
       </div>
-      </p>
-      <p>
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/17a">
       <div class="pfeil">
-           <img src="pfeil.png" alt="Pfeil" style="width:3vw;height:6vh;">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/18" style=color:rgb(238,130,238)>&gt</a>
       </div>
-      </p>
     </body>
 </html>
