--- a/18.html
+++ b/18.html
@@ -10,17 +10,11 @@
         <img src="18.jpg" alt="quest image" style="height:70vh;">
         <p style="font-size:200%; text-align:center;">Schiller dichtet nicht / off duty</p>
       </div>
-      <p>
-        <a href="https://dirtylaundri.github.io/sandstrand.github.io/17a">
       <div class="pfeilr">
-           <img src="pfeilr.png" alt="Pfeilr" style="width:3vw;height:6vh;">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/17" style=color:rgb(238,130,238)>&lt</a>
       </div>
-      </p>
-      <p>
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/19">
       <div class="pfeil">
-           <img src="pfeil.png" alt="Pfeil" style="width:3vw;height:6vh;">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/19" style=color:rgb(238,130,238)>&gt</a>
       </div>
-      </p>
     </body>
 </html>
