--- a/19.html
+++ b/19.html
@@ -10,17 +10,11 @@
         <img src="19.jpg" alt="quest image" style="width:70vw;">
         <p style="font-size:200%; text-align:center;">Tschiller: Off Duty (Christian Alvart, 2016)</p>
       </div>
-      <p>
-        <a href="https://dirtylaundri.github.io/sandstrand.github.io/18">
       <div class="pfeilr">
-           <img src="pfeilr.png" alt="Pfeilr" style="width:3vw;height:6vh;">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/18" style=color:rgb(238,130,238)>&lt</a>
       </div>
-      </p>
-      <p>
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/20">
       <div class="pfeil">
-           <img src="pfeil.png" alt="Pfeil" style="width:3vw;height:6vh;">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/20" style=color:rgb(238,130,238)>&gt</a>
       </div>
-      </p>
     </body>
 </html>
