--- a/17.html
+++ b/17.html
@@ -13,7 +13,7 @@
           <a href="https://dirtylaundri.github.io/sandstrand.github.io/16" style=color:rgb(238,130,238)>&lt</a>
       </div>
       <div class="pfeil">
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/18" style=color:rgb(238,130,238)>&gt</a>
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/17a" style=color:rgb(238,130,238)>&gt</a>
       </div>
     </body>
 </html>
