--- a/17a.html
+++ b/17a.html
@@ -11,16 +11,11 @@
       <p style="text-align:center;">"Es geht um den Zustand einer der abgebildeten Personen"</p>
       <p style="text-align:left;">"TWINS!"</p>
     </div>
-           <a href="https://dirtylaundri.github.io/sandstrand.github.io/17">
       <div class="pfeilr">
-           <img src="pfeilr.png" alt="Pfeilr" style="width:3vw;height:6vh;">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/17" style=color:rgb(238,130,238)>&lt</a>
       </div>
-      </p>
-      <p>
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/18">
       <div class="pfeil">
-           <img src="pfeil.png" alt="Pfeil" style="width:3vw;height:6vh;">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/18" style=color:rgb(238,130,238)>&gt</a>
       </div>
-      </p>
     </body>
 </html>
