--- a/18.html
+++ b/18.html
@@ -11,7 +11,7 @@
         <p style="font-size:200%; text-align:center;">Schiller dichtet nicht / off duty</p>
       </div>
       <div class="pfeilr">
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/17" style=color:rgb(238,130,238)>&lt</a>
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/17a" style=color:rgb(238,130,238)>&lt</a>
       </div>
       <div class="pfeil">
           <a href="https://dirtylaundri.github.io/sandstrand.github.io/19" style=color:rgb(238,130,238)>&gt</a>
