--- a/22.html
+++ b/22.html
@@ -6,18 +6,15 @@
     <head>
     </head>
     <body>
-      
-      <p>
-        <a href="https://dirtylaundri.github.io/sandstrand.github.io/">
+      <div class="qbild">
+        <img src="18.jpg" alt="quest image" style="height:70vh;">
+        <p style="font-size:200%; text-align:center;">Schiller dichtet nicht / off duty</p>
+      </div>
       <div class="pfeilr">
-           <img src="pfeilr.png" alt="Pfeilr" style="width:42px;height:42px;">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/17a" style=color:rgb(238,130,238)>&lt</a>
       </div>
-      </p>
-      <p>
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/will">
       <div class="pfeil">
-           <img src="pfeil.png" alt="Pfeil" style="width:42px;height:42px;">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/19" style=color:rgb(238,130,238)>&gt</a>
       </div>
-      </p>
     </body>
 </html>
