--- a/19.html
+++ b/19.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <head>
 <link rel="stylesheet" href="stylesheetbasic.css">
+<style>
+body {
+  background-color: rgb(188,130,188);
+}
+</style>
 </head>
 <html>
-    <head>
-    </head>
     <body>
       <div class="qbild">
-        <img src="19.jpg" alt="quest image" style="width:70vw;">
-        <p style="font-size:200%; text-align:center;">Tschiller: Off Duty (Christian Alvart, 2016)</p>
+      <p style="color:rgb(238, 130, 238); font-size:20em;">
+      4
+      </p>
       </div>
       <div class="pfeilr">
           <a href="https://dirtylaundri.github.io/sandstrand.github.io/18" style=color:rgb(238,130,238)>&lt</a>
