--- a/15.html
+++ b/15.html
@@ -7,8 +7,7 @@
     </head>
     <body>
       <div class="qbild">
-        <img src="15.jpg" alt="quest image" style="width:70vw;">
-        <p style="font-size:200%; text-align:center;">Bad Lieutenant (Abel Ferrara, 1992)</p>
+        <img src="15.jpg" alt="quest image" style="height:70vh;">
       </div>
       <div class="pfeilr">
           <a href="https://dirtylaundri.github.io/sandstrand.github.io/14" style=color:rgb(0,255,0)>&lt</a>
