--- a/11.html
+++ b/11.html
@@ -7,14 +7,13 @@
     </head>
     <body>
       <div class="qbild">
-        <img src="11.jpg" alt="quest image" style="width:60vw;">
-        <p style="font-size:200%; text-align:center;">Das siebente Siegel / Det sjunde inseglet (Ingmar Bergman, 1957)</p>
+        <img src="11.jpg" alt="quest image" style="height:90vh;">
       </div>
       <div class="pfeilr">
           <a href="https://dirtylaundri.github.io/sandstrand.github.io/10" style=color:rgb(0,0,255)>&lt</a>
       </div>
       <div class="pfeil">
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/c" style=color:rgb(0,0,255)>&gt</a>
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/12" style=color:rgb(0,0,255)>&gt</a>
       </div>
     </body>
 </html>
