--- a/08.html
+++ b/08.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <head>
 <link rel="stylesheet" href="stylesheetbasic.css">
+<style>
+body {
+  background-color: rgb(0,0,155);
+}
+</style>
 </head>
 <html>
-    <head>
-    </head>
     <body>
-    <div class="quotes">
-      <p style="text-align:center;">"Sie: Gib Gas, ich will Spaß"</p>
-      <p style="text-align:left;">"Ich wage nicht, im Zusammenhang mit der Lösung vor allem seiner Sprechblase das Wort "Homophonie" in den Mund zu nehmen"</p>
-      <p style="text-align:right;">"Das Gehirn will das nicht, es will irgendwie sein eigenes Ding verfolgen, und so kommt man nie zur Lösung, seufz."</p>
-      <p style="text-align:center;">"Ich kommuniziere nur noch per Filmnamen und meine Mitmenschen müssen entziffern, was ich von ihnen möchte."</p>
-      <p style="text-align:left;">"Ich verlange ein Schiedsgericht"</p>
-    </div>
+      <div class="qbild">
+      <p style="color:rgb(0, 0, 255); font-size:20em;">
+      2
+      </p>
+      </div>
       <div class="pfeilr">
           <a href="https://dirtylaundri.github.io/sandstrand.github.io/07" style=color:rgb(0,0,255)>&lt</a>
       </div>
