--- a/26.html
+++ b/26.html
@@ -3,21 +3,19 @@
 <link rel="stylesheet" href="stylesheetbasic.css">
 </head>
 <html>
-    <head>
-    </head>
     <body>
-      
-      <p>
-        <a href="https://dirtylaundri.github.io/sandstrand.github.io/">
+    <div class="quotes">
+      <p style="text-align:center;">"Fahr from Heaven"</p>
+      <p style="text-align:left;">"Unterm Helm dann wieder nicht so wichtig"</p>
+      <p style="text-align:right;">"Naja, ich habe das Bild schon ziemlich absichtlich so gewählt. "Mann" wäre also unterkomplex. Ein Kalauer ist auch drin."</p>
+      <p style="text-align:center;">"Schindlers Liste vermutlich nicht?"</p>
+      <p style="text-align:left;">"Weiter probieren. War kurz essen..."</p>
+    </div>
       <div class="pfeilr">
-           <img src="pfeilr.png" alt="Pfeilr" style="width:42px;height:42px;">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/25" style=color:rgb(255,165,0)>&lt</a>
       </div>
-      </p>
-      <p>
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/will">
       <div class="pfeil">
-           <img src="pfeil.png" alt="Pfeil" style="width:42px;height:42px;">
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/27" style=color:rgb(255,165,0)>&gt</a>
       </div>
-      </p>
     </body>
 </html>
