--- a/31.html
+++ b/31.html
@@ -5,11 +5,11 @@
 <html>
     <body>
     <div class="quotes">
-      <p style="text-align:center;">"All That Heaven Allows"</p>
-      <p style="text-align:left;">" Ist es relevant, dass die Uhr kaputt oder aus ist?"</p>
-      <p style="text-align:right;">"Ich versuche doch nur das Rätsel zu lösen."</p>
-      <p style="text-align:center;">"Könnte aber ein A24 sein"</p>
-      <p style="text-align:left;">"Aber jetzt ist es ja gelöst. Schwäbischer Dialekt war gefordert gewesen."</p>
+      <p style="text-align:center;">"Tai Hard"</p>
+      <p style="text-align:left;">"Kein aktueller Film. Aktuelles Ereignis. Sort of"</p>
+      <p style="text-align:right;">"Kein Tai, das andere"</p>
+      <p style="text-align:center;">"Was gibt's Neues, Push Chi?"</p>
+      <p style="text-align:left;">"Shelon Musk"</p>
     </div>
       <div class="pfeilr">
           <a href="https://dirtylaundri.github.io/sandstrand.github.io/30" style=color:rgb(156,0,205)>&lt</a>
