--- a/34.html
+++ b/34.html
@@ -1,26 +1,19 @@
 <!DOCTYPE html>
 <head>
 <link rel="stylesheet" href="stylesheetbasic.css">
-<style>
-body {
-  background-color: rgb(225, 205, 0);
-}
-</style>
 </head>
 <html>
     <head>
     </head>
     <body>
       <div class="qbild">
-      <p style="color:rgb(255,255,0); font-size:20em;">
-      6
-      </p>
+        <img src="34.jpg" alt="quest image" style="height:90vh;">
       </div>
       <div class="pfeilr">
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/33" style=color:rgb(255,255,0)>&lt</a>
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/34" style=color:rgb(156,0,205)>&lt</a>
       </div>
       <div class="pfeil">
-          <a href="https://dirtylaundri.github.io/sandstrand.github.io/35" style=color:rgb(255,255,0)>&gt</a>
+          <a href="https://dirtylaundri.github.io/sandstrand.github.io/36" style=color:rgb(156,0,205)>&gt</a>
       </div>
     </body>
 </html>
